--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@google-analytics/data": "^5.2.0",
     "next": "15.4.7",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
